project2/sample-https-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-app
  labels:
    app: https-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: https-app
  template:
    metadata:
      labels:
        app: https-app
    spec:
      containers:
      - name: https-app
        image: wildajax/my_personal:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: ssl-certs
          mountPath: /usr/src/app/ssl
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: ssl-certs
        secret:
          secretName: https-app-secret
---
apiVersion: v1
kind: Service
metadata:
  name: https-app-service
spec:
  selector:
    app: https-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8443
    nodePort: 30001
  type: NodePort
