project2/sample-https-app/k8s/destinationrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: https-app-destinationrule
  namespace: default
spec:
  host: https-app-service.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE # Use SIMPLE for HTTPS traffic
