project2/sample-https-app/k8s/virtualservice.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: https-app-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # Use Istio's ingress gateway
  servers:
  - port:
      number: 8001
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: https-app-credential # Kubernetes secret containing TLS cert and key
    hosts:
    - "*" # You can replace with specific domain if needed
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: https-app-virtualservice
  namespace: default
spec:
  hosts:
  - "*" # You can replace with specific domain if needed
  gateways:
  - https-app-gateway
  http:
  - match:
    route:
    - destination:
        host: https-app-service.default.svc.cluster.local
        port:
          number: 8000
